--- a/linjiashop-wxapp/package.json
+++ b/linjiashop-wxapp/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "mpvue": "^2.0.0",
     "mpvue-wxparse": "^0.6.5",
+    "node-sass": "^4.13.1",
     "vant-weapp": "^0.5.23",
     "vuex": "^3.0.1"
   },
@@ -38,7 +39,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chalk": "^2.4.0",
+    "chalk": "^2.4.2",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
@@ -57,7 +58,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "glob": "^7.1.2",
+    "glob": "^7.1.6",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.18.0",
     "mkdirp": "^0.5.1",
